--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -2,12 +2,15 @@
     margin: 0;
     padding: 0;
     width: 100%;
-    border: solid 2px black;
 }
 
 .component-header {
     margin: 0;
     padding: 0;
     width: 100%;
-    border: solid 1px red;
+    border-bottom: 1px solid black;
+}
+
+.component-header .spacer {
+     flex: 1 1 auto;
 }
