--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -7,9 +7,16 @@
     </mat-menu>
 
     <mat-toolbar id="tb-header" color="primary">
-        <button type="button" title="User" [matMenuTriggerFor]="menu_user" mat-icon-button>
-            <mat-icon>account_circle</mat-icon>
+        <button type="button" title="Applications" mat-icon-button>
+            <mat-icon>apps</mat-icon>
         </button>
+        <h4>Nexus</h4>
+        <span class="spacer"></span>
+        <ng-template *ngIf="user().is_authenticated">
+            <button type="button" title="User" [matMenuTriggerFor]="menu_user" mat-icon-button>
+                <mat-icon>account_circle</mat-icon>
+            </button>
+        </ng-template>
     </mat-toolbar>
 </div>
-{{ user_name() }}
+{{ user().name }}
