add placeholder modules. modify user service.

--- a/src/app/modules/user-registration/components/sign-up/sign-up.html
+++ b/src/app/modules/user-registration/components/sign-up/sign-up.html
@@ -8,7 +8,7 @@
                 </mat-card-header>
                 <mat-card-content>
                     <div class="field field-wrapper field-wrapper-block">
-                        <mat-form-field>
+                        <mat-form-field appearance="outline">
                             <mat-label>Email</mat-label>
                             <input type="email" placeholder="Email address" required matInput/>
                             <mat-hint>Email address</mat-hint>
