--- a/src/app/modules/user-registration/components/email-verified/email-verified.html
+++ b/src/app/modules/user-registration/components/email-verified/email-verified.html
@@ -1,1 +1,43 @@
-<p>email-verified works!</p>
+<div class="component component-sign-up-verified">
+    <mat-card class="sign-up-card" appearance="outlined">
+        <div class="form-wrapper">
+            <form id="form_sign_up" class="sign-up" method="post" action="" [formGroup]="component.signUpForm" (ngSubmit)="sign_up_verified()">
+                <mat-card-header>
+                    <mat-card-title>Sign Up</mat-card-title>
+                    <mat-card-subtitle>Set your password</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-content>
+                    <div class="field field-wrapper field-wrapper-block">
+                        <mat-form-field appearance="outline">
+                            <mat-label>Email</mat-label>
+                            <input type="email" id="email" name="email" placeholder="Email address" readonly required matInput formControlName="email"/>
+                        </mat-form-field>
+                    </div><!-- .field -->
+                    <div class="field field-wrapper field-wrapper-block">
+                        <mat-form-field appearance="outline">
+                            <mat-label>Password</mat-label>
+                            <input type="password" id="pw1" name="pw1" placeholder="Password" required matInput formControlName="pw1"/>
+                        </mat-form-field>
+                    </div><!-- .field -->
+                    <div class="field field-wrapper field-wrapper-block">
+                        <mat-form-field appearance="outline">
+                            <mat-label>Confirm Password</mat-label>
+                            <input type="password" id="pw2" name="pw2" placeholder="Confirm Password" readonly required matInput formControlName="pw2"/>
+                        </mat-form-field>
+                    </div><!-- .field -->
+                </mat-card-content>
+                <mat-card-actions>
+                    <button type="submit" class="btn-sign-up" mat-fab extended [disabled]="component.signUpForm.invalid">
+                        <mat-icon>check_circle</mat-icon>
+                        Submit
+                    </button>
+                </mat-card-actions>
+                <mat-card-footer>
+                    <ul>
+                        <li>Already have an account? <a title="Sign In" routerLink="/auth/sign-in">Sign In</a></li>
+                    </ul>
+                </mat-card-footer>
+            </form>
+        </div><!-- .form-wrapper -->
+    </mat-card>
+</div><!-- .component -->
