--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,4 @@
 <app-header></app-header>
-<router-outlet />
+<app-main [show_left_sidenav]="true" [show_right_sidenav]="false"> 
+    <router-outlet />
+</app-main>
