add ui service. modify notification service. toggle sidenav.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<app-main [show_left_sidenav]="true" [show_right_sidenav]="false"> 
+<app-main [show_left_sidenav]="show_nav_start()" [show_right_sidenav]="show_nav_end()"> 
     <router-outlet />
 </app-main>
