modify main component

--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -17,6 +17,7 @@
                     <li>Test_C</li>
                 </ul>
             </nav>
+            <app-notifications></app-notifications>
         </mat-sidenav>
         <mat-sidenav-content>
             <ng-content />
