--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -12,7 +12,7 @@
         </button>
         <h4>Nexus</h4>
         <span class="spacer"></span>
-        <button type="button" title="Notifications" mat-icon-button matBadge="1" (click)="toggle_notifications()">
+        <button type="button" title="Notifications" mat-icon-button [matBadge]="note_count()" (click)="toggle_notifications()">
             <mat-icon>notifications</mat-icon>
         </button>
         <ng-template *ngIf="user().is_authenticated">
