modify modules and components

--- a/src/app/components/anonymous/anonymous.html
+++ b/src/app/components/anonymous/anonymous.html
@@ -1,1 +1,3 @@
-<p>anonymous works!</p>
+<div class="component component-anonymous">
+    <h4>You need to <a title="Sign In" routerLink="/auth/sign-in">Sign In</a> to view this page</h4>
+</div><!-- .component -->
