--- a/src/app/modules/authentication/components/sign-in/sign-in.html
+++ b/src/app/modules/authentication/components/sign-in/sign-in.html
@@ -1,5 +1,5 @@
 <div class="component component-sign-in">
-    <mat-card class="sign-in-card" appearance="outlined">
+    <mat-card class="sign-in-card box-shadow-thin" appearance="outlined">
         <div class="form-wrapper">
             <form id="form_sign_in" class="sign-in" method="post" action="" [formGroup]="component.signInForm" (ngSubmit)="sign_in()">
                 <mat-card-header>
