--- a/src/app/modules/authentication/components/sign-in/sign-in.html
+++ b/src/app/modules/authentication/components/sign-in/sign-in.html
@@ -8,14 +8,14 @@
                 </mat-card-header>
                 <mat-card-content>
                     <div class="field field-wrapper field-wrapper-block">
-                        <mat-form-field>
+                        <mat-form-field appearance="outline">
                             <mat-label>Email</mat-label>
                             <input type="email" id="email" name="email" placeholder="Email address" required matInput formControlName="email"/>
                             <mat-hint>Email address</mat-hint>
                         </mat-form-field>
                     </div><!-- .field -->
                     <div class="field field-wrapper field-wrapper-block">
-                        <mat-form-field>
+                        <mat-form-field appearance="outline">
                             <mat-label>Password</mat-label>
                             <input type="password" id="pw" name="pw" placeholder="Password" required matInput formControlName="pw"/>
                             <mat-hint>Password</mat-hint>
