--- a/src/app/modules/admin/components/tenant/tenant.html
+++ b/src/app/modules/admin/components/tenant/tenant.html
@@ -1,1 +1,25 @@
-<p>tenant works!</p>
+<div class="component component-tenant">
+    <div class="form-wrapper">
+        <form id="form_tenant" class="form-tenant" method="post" action="" (ngSubmit)="save()">
+            <div class="form-actions">
+                <mat-toolbar id="tb-tenant" color="primary">
+                    <button type="button" title="Save" mat-icon-button>
+                        <mat-icon>save</mat-icon>
+                    </button>
+                </mat-toolbar>
+            </div><!-- .form-actions -->
+            <div class="field field-wrapper field-wrapper-block">
+                <mat-form-field appearance="outline">
+                    <mat-label>Name</mat-label>
+                    <input type="text" id="name" name="name" placeholder="Name" required matInput />
+                    <mat-hint>Tenant Name</mat-hint>
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>Description</mat-label>
+                    <textarea id="description" name="description" placeholder="Description" matInput></textarea>
+                    <mat-hint>Description</mat-hint>
+                </mat-form-field>
+            </div><!-- .field -->
+        </form>
+    </div><!-- .form-wrapper -->
+</div><!-- .component -->
