modified user registration

--- a/src/app/modules/user-registration/components/email-verified/email-verified.html
+++ b/src/app/modules/user-registration/components/email-verified/email-verified.html
@@ -22,7 +22,7 @@
                     <div class="field field-wrapper field-wrapper-block">
                         <mat-form-field appearance="outline">
                             <mat-label>Confirm Password</mat-label>
-                            <input type="password" id="pw2" name="pw2" placeholder="Confirm Password" readonly required matInput formControlName="pw2"/>
+                            <input type="password" id="pw2" name="pw2" placeholder="Confirm Password" required matInput formControlName="pw2"/>
                         </mat-form-field>
                     </div><!-- .field -->
 
