--- a/src/app/modules/admin/modules/tenants/components/tenants/tenants.html
+++ b/src/app/modules/admin/modules/tenants/components/tenants/tenants.html
@@ -1,3 +1,41 @@
 <div class="component component-admin-tenants">
-    
+    <div class="form-wrapper">
+        <form id="search_form" class="search-form" method="post" action="">
+            <div class="filters">
+                <mat-form-field appearance="outline">
+                    <mat-label>Filter</mat-label>
+                    <input type="search" id="filter" name="filter" matInput />
+                    <button type="search" mat-icon-button>
+                        <mat-icon>search</mat-icon>
+                    </button>
+                </mat-form-field>
+            </div><!-- .filters -->
+            <div class="results">
+                <table id="tbl_tenants">
+                    <caption>Tenants</caption>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Name</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tfoot>
+                        <tr>
+                            <td></td>
+                            <td>Name</td>
+                            <td></td>
+                        </tr>
+                    </tfoot>
+                    <tbody>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div><!-- .results -->
+        </form>
+    </div><!-- .form-wrapper -->
 </div><!-- component -->
