modify admin tenants module

--- a/src/app/modules/admin/modules/tenants/components/tenants/tenants.html
+++ b/src/app/modules/admin/modules/tenants/components/tenants/tenants.html
@@ -1,4 +1,4 @@
-<div class="component component-admin-tenants">
+<div class="component component-admin-tenants-tenants">
     <div class="form-wrapper">
         <form id="search_form" class="search-form" method="post" action="">
             <mat-toolbar>
