add user component

--- a/src/app/modules/admin/modules/users/components/users/users.html
+++ b/src/app/modules/admin/modules/users/components/users/users.html
@@ -3,7 +3,7 @@
         <form id="search_form" class="search-form" method="post" action="">
             <mat-sidenav-container>
                 <mat-sidenav #nav_tenant_selector position="end" mode="over" disableClose="true">
-                    <app-tenant-selector multiple="true"></app-tenant-selector>
+                    <app-tenant-selector multiple="false"></app-tenant-selector>
                     <button type="button" type="button" (click)="assign()">
                         Assign
                     </button>
