modify tenant selector

--- a/src/app/modules/tenant-selector/components/tenant-selector/tenant-selector.html
+++ b/src/app/modules/tenant-selector/components/tenant-selector/tenant-selector.html
@@ -14,7 +14,7 @@
                             <thead>
                                 <tr>
                                     <td>
-                                        @if (multiple) {
+                                        @if (multiple()) {
                                             <input type="checkbox" />
                                         }
                                     </td>
@@ -44,7 +44,7 @@
                             <thead>
                                 <tr>
                                     <td>
-                                        @if (multiple) {
+                                        @if (multiple()) {
                                             <input type="checkbox" />
                                         }
                                     </td>
