modify admin layout.

--- a/src/app/modules/admin/components/layout/layout.html
+++ b/src/app/modules/admin/components/layout/layout.html
@@ -1,4 +1,4 @@
-<div class="component component-layout">
+<div class="component component-admin-layout">
     <mat-sidenav-container>
         <mat-sidenav #nav_start_admin mode="side" position="start" disableClose="true">
             <nav>
