modify tenants components to use dynamic tenants - incomplete

--- a/src/app/modules/admin/modules/tenants/components/tenant/tenant.html
+++ b/src/app/modules/admin/modules/tenants/components/tenant/tenant.html
@@ -8,8 +8,8 @@
                 </mat-card-header>
                 <mat-card-actions>
                     <mat-toolbar>
-                        <button type="button" class="btn btn-save" aria-label="Save" matIconButton (click)="save()">
-                            <mat-icon>save</mat-icon>
+                        <button type="button" class="btn btn-save" aria-label="Save" mat-fab extended (click)="save()">
+                            <mat-icon>save</mat-icon>Save
                         </button>
                     </mat-toolbar>
                 </mat-card-actions>
