--- a/src/app/modules/admin/modules/tenants/components/tenants/tenants.html
+++ b/src/app/modules/admin/modules/tenants/components/tenants/tenants.html
@@ -21,6 +21,7 @@
                         <mat-icon>search</mat-icon>
                     </button>
                 </mat-form-field>
+                <input type="checkbox" id="test" name="test" value="test" formControlName="test" />
             </mat-toolbar>
             <div class="results">
                 <table id="tbl_tenants">
@@ -30,7 +31,7 @@
                             <th><input type="checkbox" id="select_all" name="select_all" class="field field-select-all" aria-label="Select all"/></th>
                             <th>Active</th>
                             <th>Name</th>
-                            <th></th>
+                            <th>Description</th>
                         </tr>
                     </thead>
                     <tfoot>
@@ -38,28 +39,25 @@
                             <td></td>
                             <td>Active</td>
                             <td>Name</td>
-                            <td></td>
+                            <td>Description</td>
                         </tr>
                     </tfoot>
                     <tbody formArrayName="tenants">
-                        <!--
-                        <tr *ngFor="let t of component.tenants(); index as i;" [attr.data-tenant-id]="t.id">
-                            <td><input type="checkbox" [id]="t.id" name="selected" [value]="t.id" class="field field-select" /></td>
-                            <td><mat-icon>{{ t.active ? 'radio_button_checked' : 'radio_button_unchecked' }}</mat-icon></td>
-                            <td><a [title]="t.name" class="a-tenant-name" routerLink="/admin/tenants/tenant/edit/{{ t.id }}">{{ t.name }}</a></td>
-                            <td>{{ t.description }}</td>
-                        </tr>
-                        -->
-                        @for(tenant of tenants.controls; track $index; let i = $index){ 
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                        @for(t of tenants.controls; track $index; let i = $index){ 
+                        <tr [attr.data-id]="i" [formGroupName]="i">
+                            <td><input type="checkbox" id="selected_{{ i }}" name="selected" title="Select" [value]="t.value.id" formControlName="selected"/></td>
+                            <td>
+                                @if(t.value.active) {
+                                    <mat-icon>check_small</mat-icon>
+                                }
+                            </td>
+                            <td><a class="a_tenant_edit" title="Edit" routerLink="/admin/tenants/tenant/edit/{{ t.value.id }}">{{ t.value.name }}</a></td>
+                            <td>{{ t.value.description }}</td>
                         </tr>
                         }
                     </tbody>
                 </table>
+                <pre>{{ this.component.formTenants.value | json }}</pre>
             </div><!-- .results -->
         </form>
     </div><!-- .form-wrapper -->
